--- a/shippable.yml
+++ b/shippable.yml
@@ -1,8 +1,14 @@
+
 language: php
+
+build_image: drydock/u12phppls:tip
 
 php: 
   - 5.4
-
+  - 5.5
+  - 5.6
+  - '7.0'
+  
 env:
   global:
     - APP_NAME=obscure-citadel-8851
